@@ -6,6 +6,8 @@ Changes:
 - Upgrade virtualbox-ose to 5.1.8.
 - Upgrade sudo to 1.8.18p1.
 - Upgrade nano to 2.7.1.
+- Webgui changes.
+- Command Scripts sort capability added.
 
 Fixes:
 
